Fixed z-index of the footer

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -211,7 +211,7 @@ html {
   font-size: 12px;
   color: #666666;
   background-color: #ffffff;
-  z-index: 1000;
+  z-index: 10;
   box-shadow: none;
 }
 
